cmake_minimum_required(VERSION 2.6)

FIND_PACKAGE (Qt4 REQUIRED)

SET (QT_USE_QTUITOOLS true)
SET (QT_USE_QTXML true)
SET (QT_USE_QTCORE true)
#SET (QUTIM_LIBS "")

INCLUDE (${CMAKE_ROOT}/Modules/UseQt4.cmake)
INCLUDE_DIRECTORIES (${QT_QTGUI_INCLUDE_DIR}
	${QT_QTCORE_INCLUDE_DIR}
	${QT_QTXML_INCLUDE_DIR}
)


SET(PROJECT
    Sphere)


set(SOURCES
    main.cpp 
    widget.cpp)

SET(HEADERS
    widget.h)

QT4_WRAP_CPP (MOC_SRCS ${HEADERS})
QT4_WRAP_UI (UIS_H ${FORMS})
QT4_ADD_RESOURCES (RCC ${RESOURCES})

#ADD_EXECUTABLE (qutim WIN32 ${SOURCES} ${MOC_SRCS} ${UIS_H} ${RCC})
ADD_EXECUTABLE(Sphere ${SOURCES} ${MOC_SRCS} ${UIS_H} ${RCC})

TARGET_LINK_LIBRARIES ( Sphere ${QT_LIBRARIES} )
